--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit --skipLibCheck && vite build",
     "preview": "vite preview",
     "eslint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "prettier": "prettier --write"
   },
   "dependencies": {
+    "@vue/runtime-core": "^3.2.37",
     "@vueuse/core": "^9.1.1",
+    "ant-design-vue": "^3.2.11",
+    "axios": "^0.27.2",
+    "consola": "^2.15.3",
+    "element-plus": "^2.2.15",
+    "less": "^4.1.3",
     "pinia": "^2.0.21",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
@@ -26,7 +32,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.4.0",
     "prettier": "^2.7.1",
+    "sass": "^1.54.6",
     "typescript": "^4.6.4",
+    "unplugin-vue-components": "^0.22.4",
     "vite": "^3.0.7",
     "vue-tsc": "^0.39.5"
   }
