--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "prettier --write"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.9",
     "@vue/runtime-core": "^3.2.37",
     "@vueuse/core": "^9.1.1",
     "ant-design-vue": "^3.2.11",
@@ -33,6 +34,8 @@
     "prettier": "^2.7.1",
     "sass": "^1.54.6",
     "typescript": "^4.6.4",
+    "unplugin-auto-import": "^0.11.2",
+    "unplugin-icons": "^0.14.9",
     "unplugin-vue-components": "^0.22.4",
     "vite": "^3.0.7",
     "vue-tsc": "^0.39.5"
