--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.9",
+    "@surely-vue/table": "^2.4.10",
     "@vue/runtime-core": "^3.2.37",
     "@vueuse/core": "^9.1.1",
     "ant-design-vue": "^3.2.11",
